--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,6 +8,8 @@ website:
       - href: index.qmd
         text: Home
       - about.qmd
+      - R/OH_publications_analysis.qmd
+      - abstract_EPICOH.qmd
 
 format:
   html:
