EPICOH abstract v3 with analysis using Ulrichsweb instead of OSHLINE. The analyses using OSHLINE were abandoned after realizing that OHSLINE was archived in 2007 and may thus not reflect the current status of open access practices of journals in occupational health.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,5 @@
 
 /.quarto/
 
-# Ulrichsweb dataset, which is protected by copyright and cannot be shared. 
-data/raw/2025_04_25_Ulrichsweb_oshline_journals.csv
-data/temp/journals_DOAJ.xlsx
+# Ulrichsweb datasets, which is protected by copyright and cannot be shared. 
+data
